fix(header): update color contrast (#1474)
* fix(header): started on color improvements

* fix: updated screenshots

* fix: header dropdown option focus

* fix: broken link in story

* fix(accessibility): update compliance status from 'Ongoing' to 'Passes'

* fix(header): rework styling to not use nested ::slotted

---------

--- a/packages/core/src/components/dropdown/dropdown-option/dropdown-option-vars.scss
+++ b/packages/core/src/components/dropdown/dropdown-option/dropdown-option-vars.scss
@@ -6,7 +6,6 @@
   --tds-dropdown-option-background-selected: var(--tds-grey-150);
   --tds-dropdown-option-border: var(--tds-grey-200);
   --tds-dropdown-option-border-hover: var(--tds-grey-850);
-  --tds-dropdown-option-focus: var(--tds-blue-400);
 
   .tds-mode-variant-primary {
     --tds-dropdown-option-background: var(--tds-grey-50);
@@ -24,7 +23,6 @@
   --tds-dropdown-option-background-selected: var(--tds-grey-700);
   --tds-dropdown-option-border: var(--tds-grey-600);
   --tds-dropdown-option-border-hover: var(--tds-grey-50);
-  --tds-dropdown-option-focus: var(--tds-blue-300);
 
   .tds-mode-variant-primary {
     --tds-dropdown-option-background: var(--tds-grey-850);
