--- a/packages/core/src/components/header/header-dropdown/header-dropdown.scss
+++ b/packages/core/src/components/header/header-dropdown/header-dropdown.scss
@@ -27,5 +27,13 @@
       position: relative;
       z-index: tds-z-index(tooltip) + 1;
     }
+
+    tds-header-item {
+      button:hover,
+      a:hover {
+        background-color: var(--tds-nav-item-background-hover);
+        box-shadow: none;
+      }
+    }
   }
 }
